use scrollbar preventing overflow

--- a/_self/styl/global.styl
+++ b/_self/styl/global.styl
@@ -90,6 +90,7 @@ body
         margin-left 0px
         padding 2px 8px
         font-family monaco, monospace
+        overflow-x auto
 
 a
   text-decoration none
